--- a/app/index.html
+++ b/app/index.html
@@ -35,24 +35,36 @@
 
 	<!-- Load CSS Compiled without JS -->
 	<noscript>
+		<link rel="stylesheet" href="css/header.min.css">
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
 	</noscript>
 
 </head>
 
-<body>
+<body class="ishome">
 
-	<!-- Здесь пишем код -->
-<h1>Далеко-далеко за словесными горами в стране.</h1>
-<h2>Которое, возвращайся жаренные переулка путь.</h2>
-<h3>Дал пустился несколько рот мир.</h3>
-<h4>Но однажды, несколько переулка составитель!</h4>
-<h5>Над, рыбного, всеми! Пояс, маленькая.</h5>
-<h6>Однажды все, обеспечивает взгляд осталось.</h6>
-
-<b>Lorem ipsum dolor sit amet.</b>
-<strong>Lorem ipsum dolor sit amet.</strong>
+	<header class="main-head">
+		<nav class="top-line">
+			<div class="container">
+				<ul class="sf-menu">
+					<li><a href="#">Главная</a></li>
+					<li>
+						<a href="#">Услуги и стоимость <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+						<ul>
+							<li><a href="#">Подменю</a></li>
+							<li><a href="#">Подменю</a></li>
+							<li><a href="#">Подменю</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Сертификаты</a></li>
+					<li><a href="#">Сефтьи</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
+			
+		</nav>
+	</header>
 
 	<div class="hidden"></div>
 
