Owl Carousel complete

--- a/app/index.html
+++ b/app/index.html
@@ -119,14 +119,14 @@
 	    <div class="container">
 	        <div class="slider-nav-container">
 	            <div class="slider-nav">
-	                <div class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i>
-	                </div>
-	                <div class="next"><i class="fa fa-angle-right" aria-hidden="true"></i>
-	                </div>
+	                <div class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+	                <div class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
 	            </div>
 	        </div>
 	    </div>
-			<div class="slider owl-carousel">
+
+
+			<div class="slider">
 				
 				<!-- Slide Start -->
 				<div class="slide">
@@ -205,7 +205,12 @@
 					</div>
 				</div>
 				<!-- Slide End -->
-
+				
+				<!-- <div class="owl-dots">
+            <div class="owl-dot active"><span></span></div>
+            <div class="owl-dot"><span></span></div>
+            <div class="owl-dot"><span></span></div>
+        </div> -->
 			</div>
 		</section>
 	</header>
