--- a/app/index.html
+++ b/app/index.html
@@ -45,9 +45,14 @@
 <body class="ishome">
 
 	<header class="main-head">
+
+		<div class="mobile-mnu">
+			<a href="#" class="toggle-mnu hidden-lg"><span></span></a><span>Меню</span>
+		</div>
+
 		<nav class="top-line">
 			<div class="container">
-				<ul class="sf-menu">
+				<ul class="sf-menu hidden-sm hidden-xs">
 					<li class="active"><a href="#">Главная</a></li>
 					<li>
 						<a href="#">Услуги и стоимость <i class="fa fa-caret-down" aria-hidden="true"></i></a>
@@ -73,7 +78,7 @@
 			<div class="container">
 				<div class="top-pannel-content">
 					<div class="row">
-						<div class="col-md-2 col-sm-6 col-xs-6">
+						<div class="col-md-2 col-sm-6 col-xs-4">
 							
 							<a href="#" class="logo"><img src="img/logo.png" alt="Юрдис"></a>
 
@@ -99,10 +104,10 @@
 							</div>
 
 						</div>
-						<div class="col-md-3 col-sm-6 col-xs-6">
+						<div class="col-md-3 col-sm-6 col-xs-8">
 							<div class="text-right">
 								<div class="top-phone"><span><i class="fa fa-phone" aria-hidden="true"></i> 8 (929)</span> 333-777-88, 333-777-88</div>
-								<div class="top-email"><span><i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:</span> <a href="mailto:emailsender@gmail.com">emailsender@gmail.com</a></div>
+								<div class="top-email hidden-sm hidden-xs"><span><i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:</span> <a href="mailto:emailsender@gmail.com">emailsender@gmail.com</a></div>
 								<div class="top-button">
 									<a href="#" class="button button-small">Заказать звонок</a>
 								</div>
@@ -134,7 +139,7 @@
 					<div class="slide-content">
 						<div class="container">
 							<div class="row">
-								<div class="col-md-10 col-sm-9 col-sm-offset-1">
+								<div class="col-md-10 col-sm-9 col-xs-offset-1">
 									<div class="row">
 										<div class="col-md-6">
 											<h2>Первая оценочная <br>компания Москвы</h2>
@@ -160,10 +165,10 @@
 					<div class="slide-content">
 						<div class="container">
 							<div class="row">
-								<div class="col-md-10 col-sm-9 col-sm-offset-1">
+								<div class="col-md-10 col-sm-9 col-xs-offset-1">
 									<div class="row">
 										<div class="col-md-6">
-											<h2>Первая оценочная компания Москвы</h2>
+											<h2>Первая оценочная <br>компания Москвы</h2>
 											<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Все вскоре что заголовок переулка. Грустный которое живет.</p>
 											<a href="#" class="button">Список услуг</a>
 										</div>
@@ -186,10 +191,10 @@
 					<div class="slide-content">
 						<div class="container">
 							<div class="row">
-								<div class="col-md-10 col-sm-9 col-sm-offset-1">
+								<div class="col-md-10 col-sm-9 col-xs-offset-1">
 									<div class="row">
 										<div class="col-md-6">
-											<h2>Первая оценочная компания Москвы</h2>
+											<h2>Первая оценочная <br>компания Москвы</h2>
 											<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Все вскоре что заголовок переулка. Грустный которое живет.</p>
 											<a href="#" class="button">Список услуг</a>
 										</div>
