Mobile menu done and responsive header

--- a/app/index.html
+++ b/app/index.html
@@ -44,22 +44,23 @@
 
 <body class="ishome">
 
-		<div class="mobile-mnu hidden-md hidden-lg">
-			<a href="#" class="toggle-mnu hidden-lg"><span></span></a><b>Меню</b>
-		</div>
-		<nav id="my-menu">
-			<ul>
-					<li><a href="/">Home</a></li>
-					<li><a href="/about/">About us</a></li>
-					<li><a href="/contact/">Contact</a></li>
-			</ul>
-		</nav>
-
 	<header class="main-head">
 
 		<nav class="top-line">
+
+			<div class="mobile-mnu hidden-md hidden-lg">
+				<a href="#" class="toggle-mnu hidden-lg"><span></span></a><b>Меню</b>
+			</div>
+			<!-- <nav id="my-menu">
+				<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/about/">About us</a></li>
+						<li><a href="/contact/">Contact</a></li>
+				</ul>
+			</nav> -->
+
 			<div class="container">
-				<ul class="sf-menu hidden-sm hidden-xs">
+				<ul class="sf-menu">
 					<li class="active"><a href="#">Главная</a></li>
 					<li>
 						<a href="#">Услуги и стоимость <i class="fa fa-caret-down" aria-hidden="true"></i></a>
@@ -225,6 +226,7 @@
         </div> -->
 			</div>
 		</section>
+		<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In officia voluptates officiis minus a aut animi dolorum, doloremque est reiciendis alias id libero quaerat facilis delectus iusto recusandae sed. Nostrum!</section>
 	</header>
 
 	<div class="hidden"></div>
